--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.11",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
